# LabelHub

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_auth_api.sh
backend/alembic/: env.py
backend/alembic/versions/: 20241213_000001_initial_migration.py  20251213_000001_initial_migration.py  20251214_000001_add_bbox_polygon_annotations.py  20251214_032508_add_parser_template_model.py  20251214_070442_add_user_auth_multi_user.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  annotations.py  auth.py  datasets.py  export.py  health.py  items.py  labels.py  parser_templates.py  projects.py  stats.py  users.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  annotation.py  dataset.py  item.py  label.py  parser_template.py  project.py  user.py
backend/app/schemas/: __init__.py  annotation.py  dataset.py  item.py  label.py  parser_template.py  project.py  stats.py  user.py
backend/app/services/: __init__.py  auth.py  builtin_templates.py  cache.py  export.py  importer.py  parser.py  stats.py  thumbs.py
backend/tests/: __init__.py  conftest.py  test_datasets.py  test_health.py  test_projects.py
docs/: ALIGNMENT_REPORT.md  DEPLOYMENT.md  M4_PLAN.md  MILESTONES.md  PRD.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  (+5 more)
(+41 files in other folders)
